@@ -2,7 +2,7 @@
  -
  - Copyright 2010-2017 Joey Hess <id@joeyh.name>
  -
- - Licensed under the GNU AGPL version 3 or higher.
+ - Licensed under the GNU GPL version 3 or higher.
  -}
 
 module Annex.DirHashes (
@@ -17,8 +17,6 @@ module Annex.DirHashes (
 	display_32bits_as_dir
 ) where
 
-import Data.Bits
-import Data.Word
 import Data.Default
 import qualified Data.ByteArray
 
@@ -27,6 +25,7 @@ import Key
 import Types.GitConfig
 import Types.Difference
 import Utility.Hash
+import Utility.MD5
 
 type Hasher = Key -> FilePath
 
@@ -78,21 +77,3 @@ hashDirMixed n k = hashDirs n 2 $ take 4 $ concatMap display_32bits_as_dir $
 		(shiftL b4 24 .|. shiftL b3 16 .|. shiftL b2 8 .|. b1)
 		: encodeWord32 rest
 	encodeWord32 _ = []
-
-{- modified version of display_32bits_as_hex from Data.Hash.MD5
- - in MissingH
- -   Copyright (C) 2001 Ian Lynagh 
- -   License: Either BSD or GPL
- -}
-display_32bits_as_dir :: Word32 -> String
-display_32bits_as_dir w = trim $ swap_pairs cs
-  where
-	-- Need 32 characters to use. To avoid inaverdently making
-	-- a real word, use letters that appear less frequently.
-	chars = ['0'..'9'] ++ "zqjxkmvwgpfZQJXKMVWGPF"
-	cs = map (\x -> getc $ (shiftR w (6*x)) .&. 31) [0..7]
-	getc n = chars !! fromIntegral n
-	swap_pairs (x1:x2:xs) = x2:x1:swap_pairs xs
-	swap_pairs _ = []
-	-- Last 2 will always be 00, so omit.
-	trim = take 6
